# mahjong-qna-be

./: .pre-commit-config.yaml  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml
alembic/: env.py
alembic/versions/: 2025_09_26_1257-aebc1740db59_init_migration.py  2025_09_28_0948-b690bba1c099_initial_migration.py  2025_09_29_1149-242cd4e7d904_create_questions_table.py  2025_09_30_1051-0f17ebecd6fd_create_answers_table.py
app/: main.py
app/api/: answer.py  question.py
app/core/: config.py
app/crud/: answer.py  question.py
app/db/: __init__.py  database.py
app/models/: __init__.py  answer.py  base.py  event.py  question.py  task.py  user.py
app/schemas/: answer.py  question.py
static/: index.html
tests/: conftest.py  test_basic.py
tests/api/: conftest.py  test_answer.py  test_question.py
tests/crud/: test_answer.py  test_crud.py  test_question.py
